draw current progress on active link

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -120,6 +120,12 @@ body {
     font-size: 14px;
     font-weight: bold;
   }
+
+  .atcive-location {
+    fill: red;
+    stroke: black;
+    stroke-width: 2px;
+  }
 }
 
 .nodes {
