--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -118,6 +118,7 @@ body {
   background: #404040;
   border: solid 1px grey;
   bottom: 30px;
+  color: white;
   height: 100px;
   position: absolute;
   width: 100%;
